@@ -1,12 +1,11 @@
 // Joe Jevnik
 // 2014.2.23
-// Communication with the arduino
+// Communication with the arduino.
 
 #ifndef ROV_COMM_H
 #define ROV_COMM_H
 
 #include "../common.h"
-#include "../motor/motor.h"
 #include "opcode.h"
 
 #include <stdlib.h>
@@ -16,14 +15,6 @@
 #include <errno.h>
 #include <stdbool.h>
 #include <stdio.h>
-
-// The pin modes on the arduino:
-typedef unsigned char rov_pinmode;
-#define ROV_PININPUT  0
-#define ROV_PINOUTPUT 1
-#define ROV_PINANALOG 2
-#define ROV_PINPWM    3
-#define ROV_PINSERVO  4
 
 // Initializes an arduino.
 // Parameters: the arduino pointer
@@ -39,10 +30,39 @@ typedef unsigned char rov_pinmode;
 int init_arduino(rov_arduino*,char*,size_t,rov_motor**,size_t,rov_servo**,
                  rov_therm*,rov_accel*,rov_laser*);
 
-int write_byte(rov_arduino*,unsigned char);
-
-// Writes an integer as 2 7bit values.
+// Writes a single byte to the arduino.
 // return: 0 on success, non-zero on failure.
-int write_int(rov_arduino*,int);
+int write_char(rov_arduino*,unsigned char);
+
+// Writes a string to the arduino.
+// return: 0 on success, non-zero on failure.
+int write_str(rov_arduino*,unsigned char*,size_t);
+
+// Writes a short as a string of bytes.
+// return: 0 on success, non-zero on failure.
+int write_short(rov_arduino*,unsigned short);
+
+// Sets a digital pin on or off.
+// return: 0 on success, non-zero on failure.
+int digital_write(rov_arduino*,rov_pin,bool);
+
+// Sends a value to a pin in the range of [0,1023]
+// Data is formatted as so: byte 1 = lsb of v.
+//          first 2 bits of byte 2 = 2 last bits in v.
+//           last 6 bits of byte 2 = the pin number.
+// return: 0 on success, non-zero on failure.
+int analog_write(rov_arduino*,rov_pin,unsigned short);
+
+// Reads an analog value in the range of [0,1023] off of a pin.
+// return: The value of the pin on success, negative value on failure.
+int analog_read(rov_arduino*,rov_pin);
+
+// Polls the arduino to check if it should stop sending messages.
+// return: true iff you should stop sending messages.
+bool poll_shouldstop(rov_arduino*);
+
+// Polls the arduino to check if you should start sending messages again.
+// return: true iff you should start sending messages again.
+bool poll_shouldstart(rov_arduino*);
 
 #endif
