@@ -2,8 +2,11 @@
 // 2014.2.23
 // All the opcodes needed for communication.
 
-#define DIGITAL_ON    0x00
-#define DIGITAL_OFF   0x10
-#define DIGITAL_READ  0x20
-#define ANALOG_WRITE  0x30
-#define ANALOG_READ   0x40
+#define OP_SHOULDSTOP    0x50
+#define OP_SHOULDSTART   0x60
+
+#define OP_DIGITAL_ON    0x00
+#define OP_DIGITAL_OFF   0x10
+#define OP_DIGITAL_READ  0x20
+#define OP_ANALOG_WRITE  0x30
+#define OP_ANALOG_READ   0x40
